# spectralblink

./: README.md  pyproject.toml
spectralblink/: __main__.py  color.py  rgb2spec.py
tests/: test_rgb2spec.py
